updating text on coaching page

--- a/app/views/pages/coaching_application.html.haml
+++ b/app/views/pages/coaching_application.html.haml
@@ -2,22 +2,28 @@
   .col-md-7
     %h1 The application process
     %p We assess applications at the end of each month. We receive many applications each day, and unfortunately only currently have the capacity to speak to less than 10% of applicants. 
-    %p If you don’t get through this time, please do apply again in the future when we may have more capacity. 
+    %p If you don’t get through this time, please stay in touch via our mailing list - we hope to be able to help you in the future.
     %hr
 
     %h1 What we're looking for
     %p We aim to speak to the people we can help the most to have a positive impact. Ideal candidates--those we believe will get the most out of a coaching relationship with us are:
-    %li deeply socially motivated
-    %li high achieving
-    %li open minded about how best to have an impact
-    %li interested in high priority causes
-    %li favor strategic, data-driven approaches to making decisions
-    %li have questions that we can make progress on in the time available and are likely to be relevant to others
-    %li have time to dedicate to the coaching process and thinking about their career
+    %li Deeply socially motivated and ambitious
+    %li Open minded about how best to have an impact
+    %li Favor strategic, data-driven approaches to making decisions
+    %li Willing to dedicate time to the coaching process and thinking about their career
+
+    <br>
+    %p We also look for people who have questions that we think we can make progress on and are likely to be relevant to others.
 
     %br
     %p To find out more about our application criteria, see our <a href="http://80000hours.org/blog/250-team-plan"> 6 month review</a>.
     %hr
+
+    %h1 How can you prepare?
+    %li You can see our approach to assessing causes and careers <a href="/our-research">here</a>, and start thinking about how to apply this approach to your situation.
+    %li Check our <a href="/blog">blog</a> for past research on your questions
+
+    <hr>
 
     %h1 What we ask from you
     %li Familiarity with our basic ideas and existing research relevant to your situation. In particular, our <a href="http://80000hours.org/blog/149-the-best-resources-for-planning-your-career"> best resources list</a>.
@@ -25,6 +31,8 @@
     %li Willing to provide feedback and recommendations on how we're doing. We're serious about improving and need your help to do so.
     %hr
 
+    %h1 Apply Now
+    %p We’re receiving more and more applications each day, so if it sounds like we’re a fit with you, make an application now!
     = link_to 'Apply Now', '/request-a-career-advice-session', :class => 'btn btn-large btn-primary'
       
   .col-md-1
