--- a/app/views/pages/coaching_information.html.haml
+++ b/app/views/pages/coaching_information.html.haml
@@ -1,12 +1,9 @@
 .row.coaching-info-page
   .col-md-7
     %h1 What can we help you with?
-    %h3 Comparing several options and wondering where, given your personal situation, you can make the most impact? 
-    %p It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
-    %h3 Just want to use your talents to make an impact, but not sure where to start? 
-    %p We’ll make personalised suggestions on how you can help solve the most pressing problems in the world, and help you fit these suggestions into a career plan.
-    %h3 Have a difficult question about your social impact? 
-    %p We’ll do in-depth research into the question, and help you update your career plans based on the answers.
+    %p <strong> Comparing several options and wondering where, given your personal situation, you can make the most impact?</strong> It’s likely that one of your options has far more potential than the others. We’ll help you decide. First, we’ll help you create a list of important factors, then we’ll gather data and interview experts to assess them. We’ll introduce you to other people who have been in your shoes before.
+    %p <strong>Just want to use your talents to make an impact, but not sure where to start?</strong> We’ll make personalised suggestions on how you can help solve the most pressing problems in the world, and help you fit these suggestions into a career plan.
+    %p <strong>Have a difficult question about your social impact?</strong> We’ll do in-depth research into the question, and help you update your career plans based on the answers.
     <hr>
 
     %h1 The coaching process
@@ -14,22 +11,22 @@
     %ol
       %li You tell us about your current plans, your situation and your questions.
       %li We meet for 1-2 hours via Skype or in Oxford to clarify your current plans and explore how we can help you.
-      %li We agree on research questions, and spend 1-4 days doing personalised research on your options.
+      %li We tell you what our existing research says about your situation, then agree on further research questions and spend 1-4 days doing personalised research on your options. 
       %li We discuss the results with you, and often carry out further research.
-      %li We’ll aim to introduce you to other people in your situation and potential mentors.
-      %li We deliver our research reports to you, as well as full write ups or recordings of all our conversations.
-      %li You’ll send us feedback on the process and ask how your plans have changed. This helps us to monitor our impact and improve our service. We’ll also publish our research on the blog, so that others can benefit from it (we guarantee no personal details will be shared that you don’t want to be shared).
-      %li We’ll give you the option of follow up sessions and staying in touch. Our coachees often end up as friends who we stay in touch with for years!
+      %li We aim to introduce you to other people in your situation and potential mentors.
+      %li We deliver our research reports to you, as well as full write ups or recordings of all our conversations with you.
+      %li You send us feedback on the process and information about how your plans have changed. This helps us monitor our impact and improve our service. We’ll also publish our research on the blog, so that others can benefit from it (you’ll have full say over which, if any, personal details are shared in our public content).
+      %li We give you the option of follow up sessions and staying in touch. Our coachees often end up as friends who we stay in touch with for years!
 
     <hr>
 
     %h1 The 80,000 Hours Approach
     %h3 Maximising Impact
-    %p  Some of the paths open to you have far more impact than others. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
+    %p  Some of the paths open to you have <a href="http://80000hours.org/blog/94-how-to-do-one-year-of-work-in-four-hours">far more impact than others</a>. That’s why we aim to seek out the most high impact opportunities in the world, and help you take them.
     %h3 Evidence-Based
-    %p It’s difficult to know which paths to making a difference really work. That’s why we work with academics at Oxford and leaders in prioritisation research, and base our findings on our own in-depth research.
+    %p It’s <a href="http://80000hours.org/blog/66-social-interventions-gone-wrong">difficult to know</a> which paths to making a difference really work. That’s why we work with academics at Oxford and leaders in prioritisation research, and base our findings on our own in-depth research.
     %h3 Replaceability
-    %p Some common ways to make a difference, like becoming a doctor, don’t make as much difference as you might first think. That’s because many doctors and other professionals are replaceable. We seek out the opportunities that have the greatest true impact.
+    %p Some common ways to make a difference, <a href="http://80000hours.org/blog/72-how-many-lives-does-a-doctor-save">like becoming a doctor</a>, don’t make as much difference as you might first think. That’s because the work of many doctors and other professionals is replaceable. We seek out the opportunities that have the greatest <a href="http://80000hours.org/blog/112-what-s-your-true-impact">true impact</a>.
     <hr>
 
     %h1 How much does it cost?
