--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -5,9 +5,9 @@
         .col-sm-6
           .summary
             %h2
-              You have many options open to you, and you’ll have far more impact in some than others. It can be tough to know which to choose.
+              The aim of our in-depth, one-on-one coaching is to help you have the biggest possible impact with your career. By that we mean: use the 80,000 hours of your career benefit the most people, in the biggest ways, in the long-run.
             %h2
-              We’re the only people in the world who specialise in helping you work out how to maximise your social impact: finding out how to improve the lives of as many people as possible, in the biggest ways, over the long-term.
+              Our coaching builds on <a href="/research">our research</a> to create highly in-depth, evidence-based, personalised advice for people who want a meaningful career that makes a real difference.
             .buttons
               = link_to 'Information', '/coaching/information', :class => 'btn btn-large btn-default'
               = link_to 'Application', '/coaching/application', :class => 'btn btn-large btn-default'
@@ -22,26 +22,26 @@
             %h2
               One-to-one Coaching 
           %p
-            Over a series of meetings, our coaches will help you structure your decision, clarify your plans and options, and identify actionable next steps.
+            Our coaches will help you structure your decision, clarify your options, and create a personalised action plan for making a difference.
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/272.png")
             %h2
               Our Expertise
           %p 
-            Our team and advisors will apply their knowledge of the effectiveness of different causes and the opportunities within different careers to your situation.
+            Our team will apply their knowledge of the most effective causes and careers, based on <a href="/research">our research</a>.
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/124.png")
             %h2
               Personalized Research
           %p 
-            We'll carry out 1-4 days of personalised research into the questions that matter most to your career decisions, presenting you with a complete write up and record of all conversations.
+            We'll carry out 1-4 days of personalized research into the questions that matter most to you, presenting you with a complete write up and record of all conversations.
             
         .col-sm-3.item
           .text-center
             = image_tag("/assets/pages/coaching/icons/152.png")
             %h2
-              Connections
+              Useful Introductions
           %p 
             Wherever possible, we'll introduce you to other people in our community who can help you make a difference in your career.
