header fix, small changes

--- a/app/views/career_advice_requests/new.html.haml
+++ b/app/views/career_advice_requests/new.html.haml
@@ -36,6 +36,11 @@
 
         <hr>
         = f.button :submit, "Request session", :"data-loading-text" => "Please wait..."
+        </br>
+        </br>
+        <hr>
+ 
+        %p After you submit your application, you’ll receive an automatic confirmation email. We’ll let you know the results of your application by the end of the month when we assess the applicant pool. If you have an urgent question, you can ask for us to speed up the assessment by emailing careers at 80000hours.org.
       
   .col-md-3
     .sidebar-image
