--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
         <ul class="dropdown-menu">
           <li><a href="/about">About Us</a></li>
           <li><a href="/meet_the_team">Meet the Team</a></li>
-          <li><a href="/recruitment">Work for Us</a></li>
+          <li><a href="/recruitment">Work with Us</a></li>
           <li><a href="/volunteer"> Volunteer</a></li>
           <li><a href="/faq">FAQ</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
