--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,9 +3,9 @@
     .section.cta-section
       .container
         %h1.text-center
-          You’ve got 80,000 hours to make a difference. 
+          You've got 80,000 hours in your career.
         %h2.text-center
-          Don't let them go to waste. Our free coaching and research helps you find the causes and careers in which you can make the biggest impact.
+          How can you use them to solve the world's most pressing problems? </br> Our free coaching and research helps you find the careers and causes where you can make the most difference.
         .row.buttons
           .col-md-4.col-md-offset-2
             = link_to 'Get Career Coaching', '/coaching/overview', class: "btn btn-large secondary cta"
