small changes for ben, larger pictures for research page

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -93,7 +93,7 @@
             %h2
               Planning Process
           %p
-            Having trouble tying it all together? Start by using our <a href="http://80000hours.org/blog/241-introduction-to-our-career-model">career model</a>. (And we won’t just tell you do to <a href="http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world">‘do what you’re passionate about.’</a>)
+            Having trouble tying it all together? Start by using our <a href="http://80000hours.org/blog/241-introduction-to-our-career-model">career model</a>. (And we won’t just tell you to do <a href="http://80000hours.org/blog/183-the-worst-ethical-careers-advice-in-the-world">‘do what you’re passionate about.’</a>)
 
   .section.affiliations
     .container
@@ -110,13 +110,13 @@
                 .col-md-4.col-xs-6
                   = link_to image_tag("/assets/front_page/orgs/ethics2.png"), 'http://www.practicalethics.ox.ac.uk/'
               %hr.dashed
-              Our research is done with academics at the University of Oxford and 80,000 Hours is affiliated with the University of Oxford Uehiro Centre for Practical Ethics.
+              We're affiliated with and share offices with the University of Oxford's Future of Humanity Institute and are affiliated with the Uehiro Centre for Practical Ethics.
             .col-md-5
               .row
                 .col-md-6
                   = link_to image_tag("/assets/front_page/orgs/gwwc.png"), 'http://www.givingwhatwecan.org/'
               %hr.dashed
-              80,000 Hours is part of the Centre for Effective Altruism, where it works closely with the charity Giving What we Can.
+              We're part of the Centre for Effective Altruism, and work closely with the non-profit evaluator Giving What We Can.
           <hr>
           .row.media
             = link_to "http://www.washingtonpost.com/blogs/wonkblog/wp/2013/05/31/join-wall-street-save-the-world/" do
