improved the team page

--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -8,8 +8,7 @@
       .row
         .col-md-12
           %h2.name Benjamin Todd – Co-founder and Executive Director
-          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford.  In under three years with Ben’s leadership, 80,000 Hours has grown from a student society, to an Oxford affiliated start-up with ten full-time staff, 900 members.
-          %p Outside of 80,000 Hours he has published in Climate Physics and speaks Chinese. Before 80,000 Hours, he was the first and only undergraduate to intern as an analyst at top investment fund, Orbis. Rather than taking the job, he persuaded the Chairman to donate £60,000 to his start-up non-profit!
+          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford. Outside of 80,000 Hours, he has published in Climate Physics and speaks Chinese. Before 80,000 Hours, he was the first and only undergraduate to intern as an analyst at top investment fund, Orbis. Rather than taking the job, he persuaded the Chairman to donate £60,000 to 80,000 Hours!
           %a{href: "mailto:benjamin.todd@80000hours.org"} benjamin.todd@80000hours.org
 
     .col-md-4.member
@@ -19,7 +18,7 @@
       .row
         .col-md-12
           %h2.name Will MacAskill – Co-founder and President
-          %p In 2009, Will co-founded Giving What We Can, a leading charity evaluator that has advised the UK government and World Bank. In 2011, he co-founded 80,000 Hours with Ben. While a Fulbright Scholar, he writes a column in Atlantic spin-off Qz.com, gives 30% of his stipend to charity, and has published in top philosophy journal Ethics.
+          %p In 2009, while a PhD candidate in philosophy, Will co-founded Giving What We Can, a leading charity evaluator that has moved millions of pounds to effective charities and advised the UK government, World Bank, Oxfam among others. In 2011, he co-founded 80,000 Hours with Ben. Currently a Fulbright Scholar, he writes a column in Atlantic spin-off Qz.com, gives 30% of his stipend to charity, and has published in top philosophy journal Ethics.
           %a{href: "mailto:will.macaskill@80000hours.org"} will.macaskill@80000hours.org
     .col-md-4.member
       .row
@@ -29,18 +28,9 @@
         .col-md-12
           %h2.name Roman Duda - Director of Content
           %p Roman did a fully-funded Masters in Philosophy at Oxford, during which he also consulted for a top 30 FTSE company on their business strategy, whilst also studying Mandarin Chinese. With a strong interest in Quantified Self, he has worked at the start-ups Memrise and Self Spark.
-          %p He leads the management of the content development team, as well as our impact evaluation.
           %a{href: "mailto:roman.duda@80000hours.org"} roman.duda@80000hours.org
 
   .row
-    .col-md-4.member
-      .row
-        .col-md-12
-          = image_tag("/assets/pages/team/TomAsh.jpg")
-      .row
-        .col-md-12
-          %h2.name Tom Ash – Director of Operations
-          %p Tom provides manages finances, legal and logistics shared 50% with Giving What We Can. After completing the BPhil in Philosophy at Oxford, he worked for 5 years as a professional web-developer at a variety of non-profits, including the New Internationalist.
     .col-md-4.member
       .row
         .col-md-12
@@ -48,7 +38,7 @@
       .row
         .col-md-12
           %h2.name Thomas Henry - Researcher
-          %p Thomas graduated from Monash University, Australia with a first class honours in Mathematics and Philosophy, coming top in his year in philosophy and statistics. He does research for our case studies and website content and is currently researching into entrepreneurship as a high impact career.
+          %p Thomas graduated from Monash University, Australia with a first class honours in Mathematics and Philosophy, coming top in his year in philosophy and statistics. Having been involved with Giving What We Can for several years, he moved to Oxford to join us.
           %a{href: "mailto:thomas.hendrey@80000hours.org"} thomas.hendrey@80000hours.org
 
     .col-md-4.member
@@ -58,10 +48,9 @@
       .row
         .col-md-12
           %h2.name Collin O'Rourke - Case Study Manager
+          %p Collin joined us with over three years experience of policy evaluation. He has a Masters in Public Program Evaluation and Policy Analysis, and graduated top ranked in his year at the University of Wisconsin-Madison.
           %a{href: "mailto:collin.orourke@80000hours.org"} collin.orourke@80000hours.org
 
-
-  .row
     .col-md-4.member
       .row
         .col-md-12
@@ -82,41 +71,72 @@
           = image_tag("/assets/pages/team/TobyOrd.jpg")
       .row
         .col-md-12
-          %h2.name Dr Toby Ord
-          %p Toby is a Fellow of Oxford University’s Future of Humanity Institute, an expert in global prioritisation, and has been repeatedly covered in the international media for promoting cost-effective philanthropy.
+          %h2.name Dr Toby Ord - Trustee
+          %p Toby is a Fellow of Oxford University’s Future of Humanity Institute, an expert in global prioritisation, and has been repeatedly covered in the international media for promoting cost-effective philanthropy and founding Giving What We Can.
+    .col-md-4.member
+      .row
+        .col-md-12
+          = image_tag("/assets/pages/team/NickBeckstead1.jpg")
+      .row
+        .col-md-12
+          %h2.name Nick Beckstead - Trustee
+          %p Nick is a research fellow at the Future of Humanity Institute, and wrote his PhD thesis on how ordinary efforts to do good neglect the crucial importance of the long-run future. We find his analysis and feedback invaluable.
+
+    .col-md-4.member
+      .row
+        .col-md-12
+          = image_tag("/assets/pages/team/NeilFinal.jpg")
+      .row
+        .col-md-12
+          %h2.name Niel Bowerman - Advisor 
+          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, adviser to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
+  .row 
     .col-md-4.member
       .row
         .col-md-12
           = image_tag("/assets/pages/team/paul.png")
       .row
         .col-md-12
-          %h2.name Paul Christiano
-          %p While a PhD candidate in Computer Science at Berkeley, Paul co-founded SPARC, which introduces the US’s top young mathematicians to how they can contribute to solving real world problems.
+          %h2.name Paul Christiano - Research Volunteer
+          %p Paul co-founded SPARC, which introduces the US’s top young mathematicians to the maths of intelligent decision making. He’s currently a PhD candidate in Computer Science at Berkeley and plays a leading role in pushing forward effective altruist research.
+ 
     .col-md-4.member
       .row
         .col-md-12
-          = image_tag("/assets/pages/team/NeilFinal.jpg")
-            
+          = image_tag("/assets/pages/team/JessWhittlestone.jpg")
       .row
         .col-md-12
-          %h2.name Niel Bowerman
-          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, adviser to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
-
-
+          %h2.name Jess Whittlestone - Research Volunteer
+          %p After studying Maths and Philosophy at Oxford, Jess played an invaluable role in our team developing our coaching process and research. Now she’s studying for a PhD in psychology supervised by Nick Chater - an expert in evidence-based policy.
+    .col-md-4.member
+      .row
+        .col-md-12
+          .empty-picture
+      .row
+        .col-md-12
+          %h2.name Dr. Owen Cotton-Barratt - Research Volunteer
+          %p At only 27, Owen lectures in Maths at Oxford. He has published in voting theory, artificial intelligence research and pure mathematics. We turn to him when we need to vet some tricky analysis.
+  .row 
+    .col-md-4.member
+      .row
+        .col-md-12
+          %h2.name Carl Shulman - Freelance Researcher
+          %p Carl was doing ground-breaking work in effective altruist career choice before we were founded. He has polymath interests, and has graduated law school, worked at the hedge fund Clarium Capital and carried out research into catastrophic risks at MIRI.
+ 
   <hr>
   %h1#community Community
   .row
     .col-md-4 
       %h2.name Abbie Taylor
       %em Head of the Oxford Student Group
-      %p Abbie is a Medical student at Oxford University and organises the 80,000 Hours events in Oxford. Abbie is particularly interested in ways to make more difference in careers in the healthcare industry, and hopes to encourage other medical students to think more thoroughly about their impact.
+      %p Abbie is particularly interested in how to use her medical degree to make more difference in the healthcare industry, and hopes to encourage other medical students to think more thoroughly about their impact.
     .col-md-4
       %h2.name Jacob Trefethen
       %em Head of the Cambridge Student Group
-      %p Jacob is studying philosophy at Cambridge University and is president of the recently founded 80,000 Hours chapter in Cambridge.
+      %p Jacob studies philosophy at Cambridge, speaks conversational Japanese and during secondary school finished in the top 50 in the country in the Maths Olympiad. He has previously interned at Macquarie Capital and at an internet start-up, as well as playing poker full time!
     .col-md-4
       %h2.name Max Siegel
       %em Head of the Princeton Student Group
-      %p Max is a philosophy student at Princeton University and director of the Princeton chapter of 80,000 Hours. He is interested in metaethics and wants to answer questions about value and practical reason that will help us to rank the most important global causes and the most effective interventions. He plans to pursue a career as a high-impact philosopher.
+      %p Max is a philosophy student at Princeton University and director of the Princeton chapter of 80,000 Hours. At Princeton, he founded the Princeton Journal of EU studies, was President of the Human Values Forum, and co-founded TEDxPrincetonU.
   %hr
 
