--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,14 +15,14 @@
         <ul class="dropdown-menu">
           <li><a href="/members/overview">Members</a></li>
           <li><a href="/endorsements">Endorsements</a></li>
-          <li><a href="/local-chapters">Local Groups</a></li>
+          <li><a href="/student-groups">Student Groups</a></li>
           <li><a href="/media">Media Coverage</a></li>
         </ul>
         </li> 
         <li class="dropdown a4" class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="/about">About Us</a></li>
+          <li><a href="/about-us">About Us</a></li>
           <li><a href="/meet_the_team">Meet the Team</a></li>
           <li><a href="/recruitment">Work with Us</a></li>
           <li><a href="/volunteer"> Volunteer</a></li>
