updated broken links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,17 +10,17 @@
           <li><a href="/coaching/information">Information</a></li> 
           <li><a href="/coaching/application">Application</a></li> 
         </ul>
-        <ul> <li class="heading"><a href="/our-findings">Research</a></li> </ul>
+        <ul> <li class="heading"><a href="/research">Research</a></li> </ul>
         <ul>
           <li class="heading"> <a href="/members/overview">Supporters</a> <li>
           <li><a href="/members/overview">Members</a></li>
           <li><a href="/endorsements">Endorsements</a></li>
-          <li><a href="/local-chapters">Local Groups</a></li>
+          <li><a href="/student-groups">Student Groups</a></li>
           <li><a href="/media">Media Coverage</a></li>
         </ul> 
         <ul> 
           <li class="heading" ><a href="#">About Us</a></li>
-          <li><a href="/about">About Us</a></li>
+          <li><a href="/about-us">About Us</a></li>
           <li><a href="/meet_the_team">Meet the Team</a></li>
           <li><a href="/recruitment">Work for Us</a></li>
           <li><a href="/volunteer"> Volunteer</a></li>
