--- a/app/views/pages/coaching_application.html.haml
+++ b/app/views/pages/coaching_application.html.haml
@@ -20,7 +20,7 @@
     %hr
 
     %h1 How can you prepare?
-    %li You can see our approach to assessing causes and careers <a href="/our-research">here</a>, and start thinking about how to apply this approach to your situation.
+    %li You can see our approach to assessing causes and careers <a href="/research">here</a>, and start thinking about how to apply this approach to your situation.
     %li Check our <a href="/blog">blog</a> for past research on your questions
 
     <hr>
