--- a/app/views/shared/_opengraph.html.erb
+++ b/app/views/shared/_opengraph.html.erb
@@ -1,5 +1,6 @@
     <!-- for facebook open graph -->
     <meta property="og:title" content="<%= page_title(false) %>"/>
+    <meta property="og:image" content="http://80000hours.org/assets/header/medium.png"/>
     <% if @og_type %>
       <meta property="og:type" content="<%= @og_type %>"/>
     <% else %>
