removed links for bens requests

--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -8,7 +8,7 @@
       .row
         .col-md-12
           %h2.name Benjamin Todd – Co-founder and Executive Director
-          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford. Outside of 80,000 Hours, he has published in Climate Physics and speaks Chinese. Before 80,000 Hours, he was the first and only undergraduate to intern as an analyst at top investment fund, Orbis. Rather than taking the job, he persuaded the Chairman to donate £60,000 to 80,000 Hours!
+          %p Ben co-founded 80,000 Hours in 2011 while studying for a Masters in Physics and Philosophy at Oxford. Outside of 80,000 Hours, he was the first and only undergraduate to intern as an analyst a top investment fund. Rather than taking the job, he persuaded the Chairman to donate £60,000 to 80,000 Hours!
           %a{href: "mailto:benjamin.todd@80000hours.org"} benjamin.todd@80000hours.org
 
     .col-md-4.member
@@ -79,7 +79,7 @@
           = image_tag("/assets/pages/team/NickBeckstead1.jpg")
       .row
         .col-md-12
-          %h2.name Nick Beckstead - Trustee
+          %h2.name Dr Nick Beckstead - Trustee
           %p Nick is a research fellow at the Future of Humanity Institute, and wrote his PhD thesis on how ordinary efforts to do good neglect the crucial importance of the long-run future. We find his analysis and feedback invaluable.
 
     .col-md-4.member
@@ -114,7 +114,7 @@
           .empty-picture
       .row
         .col-md-12
-          %h2.name Dr. Owen Cotton-Barratt - Research Volunteer
+          %h2.name Dr Owen Cotton-Barratt - Research Volunteer
           %p At only 27, Owen lectures in Maths at Oxford. He has published in voting theory, artificial intelligence research and pure mathematics. We turn to him when we need to vet some tricky analysis.
   .row 
     .col-md-4.member
