added Karolina back in

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -20,7 +20,7 @@
             %p
               "80,000 Hours' coaching completely changed my career plans with their tailored and actionable research."
             %h4
-              Haydn Belfield, Development Officer
+              Haydn Belfield, Development Officer at CEA
           .col-sm-3.col-xs-6.profile
             .text-center
               = image_tag("/assets/community/overview/julia-wise.png")
@@ -30,11 +30,12 @@
               Julia Wise, Social Worker
           .col-sm-3.col-xs-6.profile
             .text-center
-              = image_tag("/assets/front_page/people/jess.png")
+              = image_tag("/assets/front_page/people/Karolina.png")
             %p 
-              "I genuinely don't think there's a better place in the world to go to if you want to make a difference with your career."
+              "80,000 Hours has completely changed my view on how to connect one's passions with one's moral framework in this fast-paced century."
+              Karolina Richterova
             %h4
-              Jess Whittlestone, Psychology Ph.D Student
+              Karolina Richterova, Experimental Psychology Graduate Student
           .col-sm-3.col-xs-6.profile
             .text-center
               = image_tag("/assets/front_page/people/boris.png")
