fixed typos on homepage, niel's summary, etc

--- a/app/views/pages/meet_the_team.html.haml
+++ b/app/views/pages/meet_the_team.html.haml
@@ -37,7 +37,7 @@
           = image_tag("/assets/pages/team/ThomasHendrey.jpg")
       .row
         .col-md-12
-          %h2.name Thomas Henry - Researcher
+          %h2.name Thomas Hendrey - Researcher
           %p Thomas graduated from Monash University, Australia with a first class honours in Mathematics and Philosophy, coming top in his year in philosophy and statistics. Having been involved with Giving What We Can for several years, he moved to Oxford to join us.
           %a{href: "mailto:thomas.hendrey@80000hours.org"} thomas.hendrey@80000hours.org
 
@@ -89,7 +89,7 @@
       .row
         .col-md-12
           %h2.name Niel Bowerman - Advisor 
-          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, adviser to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
+          %p Niel has six years of experience in climate advocacy, during which he was on Obama’s 2008 Environment Policy Team, advisor to the President of the Maldives, founder of Climatico and named a Young Global Shaper by the World Economic Forum.
   .row 
     .col-md-4.member
       .row
@@ -107,7 +107,7 @@
       .row
         .col-md-12
           %h2.name Jess Whittlestone - Research Volunteer
-          %p After studying Maths and Philosophy at Oxford, Jess played an invaluable role in our team developing our coaching process and research. Now she’s studying for a PhD in psychology supervised by Nick Chater - an expert in evidence-based policy.
+          %p After studying Maths and Philosophy at Oxford, Jess played an invaluable role in our team developing our coaching process and research. Now she’s studying for a PhD in Behavioural Science supervised by Nick Chater - an expert in evidence-based policy.
     .col-md-4.member
       .row
         .col-md-12
