--- a/app/views/career_advice_requests/new.html.haml
+++ b/app/views/career_advice_requests/new.html.haml
@@ -35,7 +35,7 @@
 
 
         <hr>
-        = f.button :submit, "Request session", :"data-loading-text" => "Please wait..."
+        = f.button :submit, "Request session", :"data-loading-text" => "Please wait...", :class => "btn btn-large btn-primary"
         </br>
         </br>
         <hr>
