--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,8 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="/about-us">About Us</a></li>
-          <li><a href="/meet_the_team">Meet the Team</a></li>
-          <li><a href="/recruitment">Work with Us</a></li>
+          <li><a href="/meet_the_team">Meet The Team</a></li>
+          <li><a href="/recruitment">Work With Us</a></li>
           <li><a href="/faq">FAQ</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
         </ul>
