added 'to' in coaching page

--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -5,7 +5,7 @@
         .col-sm-6
           .summary
             %h2
-              The aim of our in-depth, one-on-one coaching is to help you have the biggest possible impact with your career. By that we mean: use the 80,000 hours of your career benefit the most people, in the biggest ways, in the long-run.
+              The aim of our in-depth, one-on-one coaching is to help you have the biggest possible impact with your career. By that we mean: use the 80,000 hours of your career to benefit the most people, in the biggest ways, in the long-run.
             %h2
               Our coaching builds on <a href="/research">our research</a> to create highly in-depth, evidence-based, personalised advice for people who want a meaningful career that makes a real difference.
             .buttons
