started coaching wufoo update

--- a/app/views/career_advice_requests/new.html.haml
+++ b/app/views/career_advice_requests/new.html.haml
@@ -4,7 +4,7 @@
       :markdown
         Please use the form below to apply for in-depth coaching from 80,000 Hours.
 
-        If you’d like to find out more about what we look for, see our [application information](LINK). If you’d like to find out more about how the process works, see our [coaching information pages.](LINK)
+        If you’d like to find out more about what we look for, see our [application information](/coaching/information). If you’d like to find out more about how the process works, see our [coaching information pages.](/coaching/overview)
 
         Note that demand for our coaching far exceeds capacity, so we can only talk to less than 10% of applicants.
 
