--- a/app/views/layouts/open.html.erb
+++ b/app/views/layouts/open.html.erb
@@ -32,27 +32,7 @@
 <%= render :partial => "/layouts/header" %>
 <%= render :partial => "layouts/subheader" %>
 
-<div class="container">
-  <div class="modal flash-modal" id="flash-modal">
-    <div class="modal-body alert" id="flash-message"></div>
-    <div class="modal-footer">
-      <a class="btn" data-dismiss="modal">Ok</a>
-    </div>
-  </div>
-  <script type="text/javascript">
-    Flash.transferFromCookies();
-    Flash.writeDataTo('error', $('#flash-message'));
-    Flash.writeDataTo('notice', $('#flash-message'));
-    if ($("#flash-message").text().length > 0)
-      {
-        $(".flash-modal").modal('show');
-      }
-      else
-        {
-          $(".flash-modal").hide();
-        }
-  </script>
-</div>
+  <%= render 'layouts/messages' %> 
   <%= yield %>
 
 <%= render :partial => "/layouts/footer" %>
