--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 <%= render :partial => "/layouts/header" %>
 <%= render :partial => "layouts/subheader" %>
 
+<div class="container">
   <section id="content">
     <%= render 'layouts/messages' %>
     <%= yield %>
