--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -22,7 +22,7 @@
           <li class="heading" ><a href="#">About Us</a></li>
           <li><a href="/about-us">About Us</a></li>
           <li><a href="/meet_the_team">Meet the Team</a></li>
-          <li><a href="/recruitment">Work for uUs</a></li>
+          <li><a href="/recruitment">Work for Us</a></li>
           <li><a href="/faq">FAQ</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
         </ul>
