minor changes to coaching form

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -78,6 +78,9 @@
     }
   }
   .show{
+    .manage_buttons{
+      margin-top:2em;
+    }
     .entry {
       background:white;
       padding:35px 35px 20px 35px;
