--- a/app/views/pages/coaching_overview.html.haml
+++ b/app/views/pages/coaching_overview.html.haml
@@ -4,7 +4,7 @@
       - if @confirmation == true
         .confirmation
           %h1 Your Application has Been Submitted Successfully!
-          %p You should get an email promptly confirming that we have your correct application. We reply to all applications within a month.
+          %p You should soon receive an email confirming receipt of your application. We aim to assess applications at the end of each month, at which point we will contact you with the results.
       = render 'layouts/messages'
       .row
         .col-sm-6
