--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -55,6 +55,8 @@
     background-color: #1bc2b1;
     padding: 7px 12px;
     border: none; }
+.blog .show .manage_buttons {
+  margin-top: 2em; }
 .blog .show .entry {
   background: white;
   padding: 35px 35px 20px 35px;
