--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -8,3 +8,8 @@
         = render :partial => "/shared/disqus"
     .col-md-3
       = render :partial => "social_media"
+      - if can? :manage, @post
+        .controls
+          .manage_buttons
+            = link_to "Edit Post", edit_blog_post_path(@post), :class => 'btn btn-mini btn-default'
+            = link_to 'Delete', blog_post_path(@post), :confirm => "Are you sure you want to delete the post '#{@post.title}'?", :method => :delete, :class => 'btn btn-mini btn-danger'
