--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -71,6 +71,10 @@ footer {
 
   .disclaimer {
     padding: 15px 0;
+    a{
+      color: #7b7f80;
+      text-decoration: underline;
+    }
   }
 
   .charity {
