--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -34,7 +34,7 @@
     <div class="disclaimer">
 
           <p>
-          We can give you information about your career options; but we can't take responsibility for the outcomes of your choices. Our advisors are not professionally qualified career advisors and we recommend you use our advice alongside someone professionally qualified.
+          We don’t take responsibility for any loss that results as the use of information on the site. See our <a href="/legal">full legal disclaimer</a>.
           </p>
           <p>
           80,000 Hours is part of the Centre for Effective Altruism, a registered charity in England and Wales, Registered Charity Number 1149828
