improved xml creator for disqus, it seems to be working now, though only for development

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -18,7 +18,8 @@
 .logo img {
   max-width: 190px; }
 
-
+/* Header
+=================================================================== */
 header {
   height: 105px;
   padding: 10px 0px 10px 0px;
