--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -67,7 +67,13 @@
   background: #aaa; }
 
 .coaching-page .confirmation {
-  background: #aaa; }
+  background: rgba(255, 255, 255, 0.7);
+  padding: 0.1em 2em 1em 2em;
+  border-radius: 3px;
+  margin-bottom: 1.5em; }
+  .coaching-page .confirmation h1 {
+    font-size: 30px;
+    margin-top: 30px; }
 .coaching-page .back-large {
   padding: 38px 0 32px 0;
   background: linear-gradient(45deg, rgba(34, 144, 175, 0.3), rgba(91, 198, 207, 0.3)); }
