adding rebelmouse widget

--- a/app/views/blog_posts/_social_media.html.erb
+++ b/app/views/blog_posts/_social_media.html.erb
@@ -25,4 +25,7 @@ lang: en_US
 
   </div>
 
+
+  <hr style="margin-top: 24px; margin-bottom:32px;">
+<script type="text/javascript" class="rebelmouse-embed-script" src="https://www.rebelmouse.com/static/js-build/embed/embed.js?site=80000Hours&height=2500&flexible=0&scrollbar_theme=dark"></script>
 </div>
